# pydub-plus

./: .gitignore  CONTRIBUTING.md  FORK_COMPLETE.md  FORK_NOTES.md  LICENSE  ORIGINAL_PYDUB_CREDITS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  setup.py
examples/: async_example.py  basic_usage.py  gpu_example.py  tiktok_workflow.py  youtube_workflow.py
pydub_plus/: __init__.py
pydub_plus/api/: __init__.py  cli.py
pydub_plus/async_ops/: __init__.py
pydub_plus/batch/: __init__.py  processor.py
pydub_plus/cli/: __init__.py  main.py
pydub_plus/core/: __init__.py
pydub_plus/gpu/: __init__.py
pydub_plus/workflows/: __init__.py  tiktok.py  youtube.py
tests/: __init__.py  test_async.py  test_gpu.py
